@@ -33,7 +33,6 @@ SUBDIRS = \
 	ipmiping \
 	ipmipower \
 	rmcpping \
-	examples \
 	contrib
 
 PACKAGE = @PACKAGE@
